--- a/Schedule.html
+++ b/Schedule.html
@@ -9,27 +9,48 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<body>
-    <div class="container">
-        <br>
-        <!-- Nav pills -->
-        <ul class="nav nav-pills" role="tablist">
+<bodyclass="bg-gradient" style="background-color: rgb(247, 163, 152);">
+  <nav class="navbar navbar-expand-md navbar-light" style="background-color: #fca85a">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" data-toggle="pill" href="http://127.0.0.1:5500/yuexinc.github.io/index.html">Home</a>
+            <a class="nav-link active" style="color: aquamarine;" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" data-toggle="pill" href="http://127.0.0.1:5500/yuexinc.github.io/Schedule.html">Schedule</a>
+            <a class="nav-link" style="color: aquamarine;" href="Schedule.html">Schedule</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" style="color: aquamarine;" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Project
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Music</a></li>
+              <li><a class="dropdown-item" href="#">Art</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="pill" href="http://127.0.0.1:5500/yuexinc.github.io/Contact.html">Contact</a>
+            <a class="nav-link" style="color: aquamarine;" href="Contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="pill" href="http://127.0.0.1:5500/yuexinc.github.io/About.html">About</a>
+            <a class="nav-link" style="color: aquamarine;" href="About.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link disabled" style="color: gray;" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>>
       
       </div>
 <div class="container">
