--- a/Schedule.html
+++ b/Schedule.html
@@ -10,7 +10,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <bodyclass="bg-gradient" style="background-color: rgb(247, 163, 152);">
-  <nav class="navbar navbar-expand-md navbar-light" style="background-color: #fca85a">
+
+<nav class="navbar navbar-expand-md navbar-dark bg-gradient" style=" background-color: rgb(181, 198, 224)">
+    <a class="navbar-brand" style="color: aquamarine" href="#">Navbar</a>
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -18,13 +20,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" style="color: aquamarine;" aria-current="page" href="#">Home</a>
+            <a class="nav-link" style="color: white;" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: aquamarine;" href="Schedule.html">Schedule</a>
+            <a class="nav-link active" style="color: white;" href="Schedule.html">Schedule</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" style="color: aquamarine;" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Project
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -35,23 +37,24 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: aquamarine;" href="Contact.html">Contact</a>
+            <a class="nav-link" style="color: white;" href="Contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: aquamarine;" href="About.html">About</a>
+            <a class="nav-link" style="color: white;" href="About.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" style="color: gray;" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
+        
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </div>
-  </nav>>
-      
+  </nav>
+  
       </div>
 <div class="container">
     <h2>Feeding Schedule</h2>
