--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="#">
+    <script src="js/sampleJS.js"></script>
     <title>Hello, world!</title>
 </head>
 
-<body class="bg-gradient" style="background-color: rgb(247, 163, 152);">
-  <nav class="navbar navbar-expand-md navbar-light" style="background-color: #fca85a">
+<body class="bg-gradient" style="background-color: rgb(243, 197, 177);">
+  <nav class="navbar navbar-expand-md navbar-dark bg-gradient" style=" background-color: rgb(181, 198, 224)">
+    <a class="navbar-brand" style="color: aquamarine" href="#">Navbar</a>
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,13 +24,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" style="color: aquamarine;" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" style="color: white;" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: aquamarine;" href="Schedule.html">Schedule</a>
+            <a class="nav-link" style="color: white;" href="Schedule.html">Schedule</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" style="color: aquamarine;" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Project
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -39,25 +41,26 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: aquamarine;" href="Contact.html">Contact</a>
+            <a class="nav-link" style="color: white;" href="Contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: aquamarine;" href="About.html">About</a>
+            <a class="nav-link" style="color: white;" href="About.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" style="color: gray;" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <input class="form-control me-2" type="search" placeholder="Meow" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </div>
   </nav>
+
     <div class="container">
         <h1 style="color: aquamarine" >Hello, world!</h1>
-        <h3 class="d-none d-md-block" style="color: aquamarine"> Welcome to Yuuuuey's Chaos</h3>
+        <h3 class="d-none d-md-block" style="color: white"> Welcome to Yuuuuey's Chaos</h3>
     </div>
     <div class="container">
       
@@ -65,7 +68,7 @@
         <img src="image/chaos2.jpg" class="mx-auto d-block img-fluid img-thumbnail" width="304" height="236">
         <img src="image/chaos3.jpg" class="float-right img-fluid img-thumbnail" width="304" height="236">
     </div>
-    <div class="container" style="color: aquamarine;"> 
+    <div class="container" style="color: white;"> 
         <div class="row">
             <div class="col-md display-5">meow1</div>
             <div class="col-md display-5">meow2</div>
@@ -92,7 +95,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
-
+<div class="container mt-5">
+  <button type="button" class="btn btn-primary" onclick="howdy('Yuexin')">Run Sample JS</button>
+</div>
 </body>
 
 </html>
