--- a/Contact.html
+++ b/Contact.html
@@ -45,12 +45,24 @@
             <a class="nav-link disabled" style="color: gray;" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
+
+  <div class="container" style="color: black;"> 
+    <div class="row">
+        <div class="col-md display-5">meow1</div>
+        <div class="col-md display-5">meow2</div>
+        <div class="col-md display-5">meow3</div>
+    </div>
+    <div class="row">
+        <div class="col-md display-6">meow4</div>
+        <div class="col-md display-6">meow5</div>
+        <div class="col-md display-6">meow6</div>
+        <div class="col-md display-6">meow7</div>
+        <div class="col-md display-6">meow8</div>
+    </div>
+</div>
+
 </body>
 </html>
