--- a/Schedule.html
+++ b/Schedule.html
@@ -9,9 +9,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<bodyclass="bg-gradient" style="background-color: rgb(247, 163, 152);">
 
-<nav class="navbar navbar-expand-md navbar-dark bg-gradient" style=" background-color: rgb(181, 198, 224)">
+<body>
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-gradient" style=" background-color: rgb(181, 198, 224)">
     <a class="navbar-brand" style="color: aquamarine" href="#">Navbar</a>
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,11 +47,7 @@
             <a class="nav-link disabled" style="color: gray;" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+
       </div>
     </div>
   </nav>
