--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="#">
-    <script src="js/sampleJS.js"></script>
+        <script src="js/sampleJS.js"></script>
     <title>Hello, world!</title>
 </head>
 
@@ -52,7 +51,7 @@
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Meow" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-light" style="color: white;" type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -68,20 +67,7 @@
         <img src="image/chaos2.jpg" class="mx-auto d-block img-fluid img-thumbnail" width="304" height="236">
         <img src="image/chaos3.jpg" class="float-right img-fluid img-thumbnail" width="304" height="236">
     </div>
-    <div class="container" style="color: white;"> 
-        <div class="row">
-            <div class="col-md display-5">meow1</div>
-            <div class="col-md display-5">meow2</div>
-            <div class="col-md display-5">meow3</div>
-        </div>
-        <div class="row">
-            <div class="col-md display-6">meow4</div>
-            <div class="col-md display-6">meow5</div>
-            <div class="col-md display-6">meow6</div>
-            <div class="col-md display-6">meow7</div>
-            <div class="col-md display-6">meow8</div>
-        </div>
-    </div>
+
    
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -96,7 +82,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
 <div class="container mt-5">
-  <button type="button" class="btn btn-primary" onclick="howdy('Yuexin')">Run Sample JS</button>
+  <button type="button" class="btn btn-primary" onclick="howdy()">Greetings!</button>
+  <button type="button" class="btn btn-primary" onclick="conditional()">conditional</button>
+  <button type="button" class="btn btn-primary" onclick="evalNumber()">Evaluate Number</button>
+  <button type="button" class="btn btn-primary" onclick="minOfDay()">Current Minute of the Day</button>
 </div>
 </body>
 
