made "project" dropdown disappear

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Project
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color:rgb(181, 198, 224);">
               <li><a class="dropdown-item" href="#">Music</a></li>
               <li><a class="dropdown-item" href="#">Art</a></li>
               <li><hr class="dropdown-divider"></li>
@@ -86,6 +86,7 @@
   <button type="button" class="btn btn-primary" onclick="conditional()">conditional</button>
   <button type="button" class="btn btn-primary" onclick="evalNumber()">Evaluate Number</button>
   <button type="button" class="btn btn-primary" onclick="minOfDay()">Current Minute of the Day</button>
+  <button type="button" class="btn btn-primary" onclick="disappear()">Make "Project" Disappear</button>
 </div>
 </body>
 
