--- a/index.html
+++ b/index.html
@@ -2,92 +2,68 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <script src="js/sampleJS.js"></script>
-    <title>Hello, world!</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <title>Hello, world!</title>
 </head>
 
-<body class="bg-gradient" style="background-color: rgb(243, 197, 177);">
-  <nav class="navbar navbar-expand-md navbar-dark bg-gradient" style=" background-color: rgb(181, 198, 224)">
+<body class="bg-gradient" style="background-color: #51304e;">
+  <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
     <a class="navbar-brand" style="color: aquamarine" href="#">Navbar</a>
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" style="color: white;" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" style="color: white;" aria-current="page" href="#">home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="Schedule.html">Schedule</a>
+            <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Project
+            <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              project
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color:rgb(181, 198, 224);">
-              <li><a class="dropdown-item" href="#">Music</a></li>
-              <li><a class="dropdown-item" href="#">Art</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">music</a></li>
+              <li><a class="dropdown-item" href="#">art</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="Contact.html">Contact</a>
+            <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="About.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" style="color: gray;" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link" style="color: white;" href="About.html">about</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Meow" aria-label="Search">
-          <button class="btn btn-outline-light" style="color: white;" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
 
-    <div class="container">
-        <h1 style="color: aquamarine" >Hello, world!</h1>
-        <h3 class="d-none d-md-block" style="color: white"> Welcome to Yuuuuey's Chaos</h3>
-    </div>
-    <div class="container">
-      
-        <img src="image/chaos1.jpg" class="float-left img-fluid img-thumbnail" width="304" height="236">
-        <img src="image/chaos2.jpg" class="mx-auto d-block img-fluid img-thumbnail" width="304" height="236">
-        <img src="image/chaos3.jpg" class="float-right img-fluid img-thumbnail" width="304" height="236">
-    </div>
+  <div class="container">
+    <h1 style="color: aquamarine">Hello, world!</h1>
+    <h3 class="d-none d-md-block" style="color: white"> Welcome to Yuuuuey's Chaos</h3>
+  </div>
 
-   
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    -->
-<div class="container mt-5">
-  <button type="button" class="btn btn-primary" onclick="howdy()">Greetings!</button>
-  <button type="button" class="btn btn-primary" onclick="conditional()">conditional</button>
-  <button type="button" class="btn btn-primary" onclick="evalNumber()">Evaluate Number</button>
-  <button type="button" class="btn btn-primary" onclick="minOfDay()">Current Minute of the Day</button>
-  <button type="button" class="btn btn-primary" onclick="disappear()">Make "Project" Disappear</button>
-</div>
+  <div class="container">
+    <img src="image/chaos1.jpg" class="float-left img-fluid img-thumbnail" width="304" height="236">
+    <img src="image/chaos2.jpg" class="mx-auto d-block img-fluid img-thumbnail" width="304" height="236">
+    <img src="image/chaos3.jpg" class="float-right img-fluid img-thumbnail" width="304" height="236">
+  </div>
 </body>
 
 </html>
