--- a/About.html
+++ b/About.html
@@ -1,19 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Hello, world!</title>
-  </head>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/yuexinc.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="js/sampleJS.js"></script>
+  <title>Hello, world!</title>
+</head>
 
 <body style=" background-color: #51304e">
+
   <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
-    <a class="navbar-brand" style="color: aquamarine" href="#">Navbar</a>
+    <a class="navbar-brand" style="color: aquamarine" href="#">Meow</a>
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,19 +26,20 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" style="color: white;" aria-current="page" href="index.html">home</a>
+            <a class="nav-link" style="color: white;" aria-current="page" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" style="color: white;" href="Sandbox.html">sandbox</a>
+            <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
-              project
+              APIs
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color:rgb(181, 198, 224);">
-              <li><a class="dropdown-item" href="#">music</a></li>
-              <li><a class="dropdown-item" href="#">art</a></li>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="map.html">map</a></li>
+              <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
+              <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -45,14 +50,46 @@
             <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="About.html">about</a>
+            <a class="nav-link active" style="color: white;" href="About.html">about</a>
           </li>
         </ul>
-        
       </div>
     </div>
   </nav>
-
+<div class="container" id="columns" style="color: aliceblue;">
+  <div class="row">
+<div class="col-sm">
+  <h2>Who are you?</h2>
+  <p>
+    I am a
+    <strong>Digital Humanities</strong>
+    student at the University of Chicago.
+  </p>
+</div>
+<br>
+<div class="col-sm">
+  <h2>Where have you lived?</h2>
+  <p>
+    I grew up in Shenzhen, China and moved to LA when I was 18. I went to College in Colorado Springs. Waking up to the Pikes Peak was a favorite memory. I had lived in Brazil for 3 months learning Portuguese, and Finland for half a year making stone arts. I spent a year in Monterey studying Translation and Interpretation. Now I travel between Chicago and Nashville.
+  </p>
+</div>
+<br>
+<div class="w-100"></div>
+<div class="col-sm">
+  <h2>What do you love?</h2>
+  <p>
+    I love daydreaming. My cats. My parents. Drawing, painting, printmaking. Playing the banjo. Making stained glass. Oh and getting lost in and upset at Freudian psychoanalysis.
+  </p>
+</div>
+<br>
+<div class="col-sm">
+  <h2>What are your dreams?</h2>
+  <p>
+    I would love to be a chef, an artist or a musician. If none of the above works, let me be happy and useful!
+  </p>
+</div>
+</div>
+</div>
 </body>
 
 </html>
