--- a/Sandbox.html
+++ b/Sandbox.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="js/sampleJS.js"></script>
-  <title>Hello, world! hehehe why is this not showing?</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+<script src="js/sampleJS.js"></script>  
+<title>Hello, world! hehehe why is this not showing?</title>
 </head>
 
 <body style=" background-color: #51304e">
   <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
-    <a class="navbar-brand" style="color: aquamarine" href="#">Navbar</a>
+    <a class="navbar-brand" style="color: aquamarine" href="#">Meow</a>
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,19 +24,20 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" style="color: #d9d9d9;" aria-current="page" href="index.html">home</a>
+            <a class="nav-link" aria-current="page" style="color: white;" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" style="color: #d9d9d9;" href="Sandbox.html">sandbox</a>
+            <a class="nav-link active" href="Sandbox.html">sandbox</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" style="color: #d9d9d9;" href="#" id="navbarDropdown" role="button"
+            <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
-              project
+              APIs
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color:rgb(181, 198, 224);">
-              <li><a class="dropdown-item" href="#">music</a></li>
-              <li><a class="dropdown-item" href="#">art</a></li>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="map.html">map</a></li>
+              <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
+              <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -44,27 +45,50 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #d9d9d9;" href="Contact.html">contact</a>
+            <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #d9d9d9;" href="About.html">about</a>
+            <a class="nav-link" style="color: white;" href="About.html">about</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" style="color: gray;" href="#" tabindex="-1" aria-disabled="true">disabled</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Meow" aria-label="Search">
-          <button class="btn btn-outline-light" style="color: #d9d9d9;" type="submit">search</button>
-        </form>
       </div>
     </div>
   </nav>
-
-  <div class="container" style="color: #e8d8e6;">
-    <h2>Feeding Schedule</h2>
+  <br>
+  <div class="container" style="color: white">
+    <div class="row">
+      <div class="col-md display-4">cat1</div>
+      <div class="col-md display-4">cat2</div>
+      <div class="col-md display-4">dog1</div>
+    </div>
+    <div class="row">
+      <div class="col-md display-6">Moon</div>
+      <div class="col-md display-6">Mini</div>
+      <div class="col-md display-6">Frankenstein</div>
+    </div>
+  </div>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-md display-md py-3">
+    <img src="image/cat1.jpg" class="img-fluid img-thumbnail">
+      </div>
+      <div class="col-md display-md py-3">
+    <img src="image/cat2.jpg" class="img-fluid img-thumbnail">
+      </div>
+      <div class="col-md display-md py-3">
+    <img id="dog1" src="image/cat3.jpg" class="img-fluid img-thumbnail">
+      </div>
+  </div>
+  </div>
+  <br>
+  <div class="container" style="color: white;">
+    <h2 id="table title">Feeding Schedule</h2>
     <p>When/what should they eat?</p>
-    <table class="table table-borderless">
+    <table class="table table-borderless container-fluid" style="color: white;">
       <thead>
         <tr>
           <th>Name</th>
@@ -91,29 +115,12 @@
       </tbody>
     </table>
   </div>
-
+<!-- buttons -->
   <div class="container mt-5">
-    <button type="button" class="btn btn-primary" onclick="howdy()">Greetings!</button>
-    <button type="button" class="btn btn-primary" onclick="conditional()">conditional</button>
-    <button type="button" class="btn btn-primary" onclick="evalNumber()">Evaluate Number</button>
-    <button type="button" class="btn btn-primary" onclick="minOfDay()">Current Minute of the Day</button>
-    <button type="button" class="btn btn-primary" onclick="disappear()">Make "Project" Disappear</button>
+    <button type="button" class="btn btn-primary" onclick="changeTitle()">Change Title</button>
+    <button type="button" class="btn btn-primary" onclick="disappear()">Get rid of Frankenstein</button>
+    <button type="button" class="btn btn-primary" onclick="meow()">Hello Kitties</button>
   </div>
 
-  <div class="container" style="color: #e8d8e6">
-    <div class="row">
-      <div class="col-md display-5">meow1</div>
-      <div class="col-md display-5">meow2</div>
-      <div class="col-md display-5">meow3</div>
-    </div>
-    <div class="row">
-      <div class="col-md display-6">meow4</div>
-      <div class="col-md display-6">meow5</div>
-      <div class="col-md display-6">meow6</div>
-      <div class="col-md display-6">meow7</div>
-      <div class="col-md display-6">meow8</div>
-    </div>
-  </div>
 </body>
-
 </html>
