--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    crossorigin="anonymous"></script>
+  <script src="js/sampleJS.js"></script>
   <title>Hello, world!</title>
 </head>
 
-<body class="bg-gradient" style="background-color: #51304e;">
+<body style="background-color: #51304e;">
+  <!-- navbar -->
   <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
-    <a class="navbar-brand" style="color: aquamarine" href="#">Navbar</a>
+    <a class="navbar-brand" style="color: aquamarine" href="#">Meow</a>
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,19 +28,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" style="color: white;" aria-current="page" href="#">home</a>
+            <a class="nav-link active" style="color: white;" aria-current="page" href="#">HOME</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              project
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color:rgb(181, 198, 224);">
-              <li><a class="dropdown-item" href="#">music</a></li>
-              <li><a class="dropdown-item" href="#">art</a></li>
+              data-bs-toggle="dropdown" aria-expanded="false">APIs</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="map.html">map</a></li>
+              <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
+              <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -53,17 +56,75 @@
       </div>
     </div>
   </nav>
-
+  <!-- title -->
   <div class="container">
     <h1 style="color: aquamarine">Hello, world!</h1>
     <h3 class="d-none d-md-block" style="color: white"> Welcome to Yuuuuey's Chaos</h3>
   </div>
-
-  <div class="container">
-    <img src="image/chaos1.jpg" class="float-left img-fluid img-thumbnail" width="304" height="236">
-    <img src="image/chaos2.jpg" class="mx-auto d-block img-fluid img-thumbnail" width="304" height="236">
-    <img src="image/chaos3.jpg" class="float-right img-fluid img-thumbnail" width="304" height="236">
+  <!-- carousel -->
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="image/chaos1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="image/chaos2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="image/chaos3.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
+  <!-- buttons -->
+  <div class="container mt-5">
+    <button type="button" class="btn btn-primary" onclick="howdy()">Greetings!</button>
+    <button type="button" class="btn btn-primary" onclick="evalNumber()">Odd or Even</button>
+    <button type="button" class="btn btn-primary" onclick="minOfDay()">Current Min</button>
+    <button type="button" class="btn btn-primary" onclick="parentFunction()">Parent Function?</button>
+  </div>
+  <!-- footer -->
+  <footer id="footerPlaceholder" class="d-none d-md-block footer container-fluid mt-auto py-3 bg-dark">
+    <div class="container">
+      <div class="row text-muted">
+        <div class="col-4">
+          test footer
+        </div>
+        <div class="col-4"></div>
+        <div class="col-4 justify-content-end">
+          yuexinc.
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
