--- a/About.html
+++ b/About.html
@@ -40,6 +40,7 @@
               <li><a class="dropdown-item" href="map.html">map</a></li>
               <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
               <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
+              <li><a class="dropdown-item" href="#">music</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -56,9 +57,9 @@
       </div>
     </div>
   </nav>
-<div class="container" id="columns" style="color: aliceblue;">
+<div class="container" id="columns" style="color: lightsteelblue;">
   <div class="row">
-<div class="col-sm">
+<div class="col-sm" style="color: white;">
   <h2>Who are you?</h2>
   <p>
     I am a
@@ -78,18 +79,19 @@
 <div class="col-sm">
   <h2>What do you love?</h2>
   <p>
-    I love daydreaming. My cats. My parents. Drawing, painting, printmaking. Playing the banjo. Making stained glass. Oh and getting lost in and upset at Freudian psychoanalysis.
+    I love daydreaming, drawing, painting, printmaking, playing the banjo, making other people happy, making stained glass, picking my scattered brain apart, and getting mildly upset at Freudian psychoanalysis.
   </p>
 </div>
 <br>
-<div class="col-sm">
+<div class="col-sm" style="color: white;">
   <h2>What are your dreams?</h2>
   <p>
-    I would love to be a chef, an artist or a musician. If none of the above works, let me be happy and useful!
+    I don't mind being a spy, a chef, or an artist! If not, then I shall remain happy, scattered and useful. 
   </p>
 </div>
 </div>
 </div>
+
 </body>
 
 </html>
