--- a/Contact.html
+++ b/Contact.html
@@ -39,6 +39,7 @@
               <li><a class="dropdown-item" href="map.html">map</a></li>
               <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
               <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
+              <li><a class="dropdown-item" href="#">music</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -56,7 +57,9 @@
     </div>
   </nav>
 
+<div class="container">
   <p style="color: white;">yuexinc@uchicago.edu</p>
+</div>
 </body>
 
 </html>
