--- a/map.html
+++ b/map.html
@@ -43,6 +43,7 @@
               <li><a class="dropdown-item active" href="map.html">map</a></li>
               <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
               <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
+              <li><a class="dropdown-item" href="#">music</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -66,7 +67,7 @@
     <h1 style="color:azure;">Map API Example</h1>
     <div id="map"></div>
   </div>
-  <script src="js/sampleJS.js"></script>
+  <script src="js/map.js"></script>
 </body>
 
 </html>
