--- a/wiki.html
+++ b/wiki.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" style="color: white;" aria-current="page" href="#">HOME</a>
+                <a class="nav-link" style="color: white;" aria-current="page" href="index.html">HOME</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
@@ -31,6 +31,7 @@
                   <li><a class="dropdown-item" href="map.html">map</a></li>
                   <li><a class="dropdown-item active" href="wiki.html">wiki</a></li>
                   <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
+                  <li><a class="dropdown-item" href="#">music</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
@@ -48,6 +49,7 @@
         </div>
       </nav>
     <!-- User Input field -->
+    <div class="container mt-5">
     <form>
         <div class="row">
             <div class="col">
@@ -61,7 +63,7 @@
 
     <!-- Output from JS function loads here -->
     <div class="container" id="wiki" style="color: aliceblue;"></div>
-
+  </div>
     <script src="js/wiki.js"></script>
 </body>
 </html>
