--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
               <li><a class="dropdown-item" href="map.html">map</a></li>
               <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
               <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
+              <li><a class="dropdown-item" href="#">music(forthcoming)</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -59,7 +60,7 @@
   <!-- title -->
   <div class="container">
     <h1 style="color: aquamarine">Hello, world!</h1>
-    <h3 class="d-none d-md-block" style="color: white"> Welcome to Yuuuuey's Chaos</h3>
+    <h3 class="d-none d-md-block" style="color: whitesmoke"> Welcome to Yuuuuey's Chaos</h3>
   </div>
   <!-- carousel -->
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -71,7 +72,7 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
         aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
+    <div class="carousel-inner container mt-5">
       <div class="carousel-item active">
         <img src="image/chaos1.jpg" class="d-block w-100" alt="...">
       </div>
@@ -98,33 +99,8 @@
     <button type="button" class="btn btn-primary" onclick="howdy()">Greetings!</button>
     <button type="button" class="btn btn-primary" onclick="evalNumber()">Odd or Even</button>
     <button type="button" class="btn btn-primary" onclick="minOfDay()">Current Min</button>
-    <button type="button" class="btn btn-primary" onclick="parentFunction()">Parent Function?</button>
+    <button type="button" class="btn btn-primary" onclick="parentFunction()" >Parent Function?</button>
   </div>
-  <!-- footer -->
-  <footer id="footerPlaceholder" class="d-none d-md-block footer container-fluid mt-auto py-3 bg-dark">
-    <div class="container">
-      <div class="row text-muted">
-        <div class="col-4">
-          test footer
-        </div>
-        <div class="col-4"></div>
-        <div class="col-4 justify-content-end">
-          yuexinc.
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-
 </body>
 
 </html>
