--- a/Sandbox.html
+++ b/Sandbox.html
@@ -37,7 +37,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="map.html">map</a></li>
               <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
-              <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
+              <li><a class="dropdown-item" href="rstiTexts.html">ochre</a></li>
               <li><a class="dropdown-item" href="#">music(forthcoming)</a></li>
               <li>
                 <hr class="dropdown-divider">
