--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="map.html">map</a></li>
               <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
-              <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
+              <li><a class="dropdown-item" href="rstiTexts.html">ochre</a></li>
               <li><a class="dropdown-item" href="#">music(forthcoming)</a></li>
               <li>
                 <hr class="dropdown-divider">
@@ -52,6 +52,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: white;" href="About.html">about</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="array.html">array</a>
           </li>
         </ul>
       </div>
