--- a/rstiTexts.html
+++ b/rstiTexts.html
@@ -14,14 +14,53 @@
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
 </head>
-<body onload="loadXML()">
-    <div id="nav-placeholder"></div>
+<body onload="loadXML()" style="background-color: #51304e;">
+    <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
+        <a class="navbar-brand" style="color: aquamarine" href="#">Meow</a>
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" style="color: white;" aria-current="page" href="index.html">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">APIs</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="map.html">map</a></li>
+                  <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
+                  <li><a class="dropdown-item active" href="rstiTexts.html">ochre</a></li>
+                  <li><a class="dropdown-item" href="#">music(forthcoming)</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white;" href="About.html">about</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <!-- table -->
     <div class="container mt-3">
         <div id="title"></div>
 
         <div class="container">
             <h4 id="setTitle"></h4>
-            <table class="table table-striped order-table" id="ochreTable">
+            <table class="table table-striped order-table" id="ochreTable" style="background-color: white;">
                 <thead class="thread-dark" id="ochreTableColumns">
                     <tr>
                         <th style="text-align: left; width: 30%;">Name</th>
