--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="map.html">map</a></li>
               <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
-              <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
+              <li><a class="dropdown-item" href="rstiTexts.html">ochre</a></li>
               <li><a class="dropdown-item" href="#">music</a></li>
               <li>
                 <hr class="dropdown-divider">
