--- a/map.html
+++ b/map.html
@@ -42,7 +42,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item active" href="map.html">map</a></li>
               <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
-              <li><a class="dropdown-item" href="wiki.html">ochre</a></li>
+              <li><a class="dropdown-item" href="rstiTexts.html">ochre</a></li>
               <li><a class="dropdown-item" href="#">music</a></li>
               <li>
                 <hr class="dropdown-divider">
