--- a/rstiTexts.html
+++ b/rstiTexts.html
@@ -68,12 +68,13 @@
                     </tr>
                 </thead>
                 <tbody id="ochreTableBody">
-                  <a href="#" title="photograph" onclick="showImage()">test</a>
+
 
                 </tbody>
             </table>
         </div>
     </div>
+    <div id="image display" class="container" onclick="showImage()" style="color: aliceblue;"></div>
     <script src="js/loadTextList.js"></script>
 </body>
 </html>
