--- a/About.html
+++ b/About.html
@@ -74,7 +74,7 @@
 <div class="col-sm">
   <h2>Where have you lived?</h2>
   <p>
-    I grew up in Shenzhen, China and moved to LA when I was 18. I went to College in Colorado Springs. Waking up to the Pikes Peak was a favorite memory. I had lived in Brazil for 3 months learning Portuguese, and Finland for half a year making stone arts. I spent a year in Monterey studying Translation and Interpretation. Now I travel between Chicago and Nashville.
+    I grew up in Shenzhen, China and moved to LA when I was 18. I went to College in Colorado Springs. Waking up to the Pikes Peak was a favorite memory. I had lived in Brazil for 3 months learning Portuguese, and Finland for half a year making stone jewelries. I spent a year in Monterey studying Translation and Interpretation. Now I travel between Chicago and Nashville.
   </p>
 </div>
 <br>
@@ -89,7 +89,7 @@
 <div class="col-sm" style="color: white;">
   <h2>What are your dreams?</h2>
   <p>
-    I don't mind being a spy, a chef, or an artist! If not, then I shall remain happy, scattered and useful. 
+    To be a spy, a chef, or an artist!  
   </p>
 </div>
 </div>
