--- a/final.html
+++ b/final.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <script src="/js/p5.js"></script>
+    <script src="/js/AMI final.js"></script>
     <p>Move your right elbow to place the crown.</p>
 </body>
 </html>
