--- a/map.html
+++ b/map.html
@@ -31,27 +31,39 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" style="color: white;" aria-current="page" href="index.html">HOME</a>
+            <a class="nav-link active" style="color: white;" aria-current="page" href="#">HOME</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="ami.html">DESIGN A FUTURE BIRD</a>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">APIs</a>
+              data-bs-toggle="dropdown" aria-expanded="false">AMI</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item active" href="map.html">map</a></li>
-              <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
-              <li><a class="dropdown-item" href="rstiTexts.html">ochre</a></li>
-              <li><a class="dropdown-item" href="#">music</a></li>
+              <li><a class="dropdown-item" href="midterm.html">sound to image</a></li>
+              <li><a class="dropdown-item" href="final.html">poseNet</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">API</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="map.html">map</a></li>
+              <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
+              <li><a class="dropdown-item" href="rstiTexts.html">ochre</a></li>
+              <li><a class="dropdown-item" href="#">music(forthcoming)</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="array.html">array</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
