--- a/rstiTexts.html
+++ b/rstiTexts.html
@@ -15,48 +15,60 @@
     crossorigin="anonymous"></script>
 </head>
 <body onload="loadXML()" style="background-color: rgb(72,22,53)">
-    <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
-        <a class="navbar-brand" style="color: aquamarine" href="#">Meow</a>
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" style="color: white;" aria-current="page" href="index.html">HOME</a>
+  <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
+    <a class="navbar-brand" style="color: aquamarine" href="#">Meow</a>
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" style="color: white;" aria-current="page" href="#">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">AMI</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="midterm.html">sound to image</a></li>
+              <li><a class="dropdown-item" href="final.html">poseNet</a></li>
+              <li>
+                <hr class="dropdown-divider">
               </li>
-              <li class="nav-item">
-                <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" style="color: white;" href="ami.html">DESIGN A FUTURE BIRD</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">APIs</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="map.html">map</a></li>
-                  <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
-                  <li><a class="dropdown-item active" href="rstiTexts.html">ochre</a></li>
-                  <li><a class="dropdown-item" href="#">music(forthcoming)</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" style="color: white;" href="About.html">about</a>
-              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-          </div>
-        </div>
-      </nav>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">API</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="map.html">map</a></li>
+              <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
+              <li><a class="dropdown-item" href="rstiTexts.html">ochre</a></li>
+              <li><a class="dropdown-item" href="#">music(forthcoming)</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="array.html">array</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="About.html">about</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <!-- table -->
     <div class="container" style="color: aliceblue;">
       <h3>Click on a text name to view images!</h3>
