--- a/index.html
+++ b/index.html
@@ -33,12 +33,21 @@
           <li class="nav-item">
             <a class="nav-link" style="color: white;" href="Sandbox.html">sandbox</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="ami.html">DESIGN A FUTURE BIRD</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">AMI</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="midterm.html">sound to image</a></li>
+              <li><a class="dropdown-item" href="final.html">design a future bird!</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">APIs</a>
+              data-bs-toggle="dropdown" aria-expanded="false">API</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="map.html">map</a></li>
               <li><a class="dropdown-item" href="wiki.html">wiki</a></li>
@@ -49,9 +58,9 @@
               </li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-            <li class="nav-item">
-              <a class="nav-link" style="color: white;" href="array.html">array</a>
-            </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="array.html">array</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: white;" href="Contact.html">contact</a>
