added the green squares

--- a/final.html
+++ b/final.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <script src="/js/AMI final.js"></script>
+    <!-- <script src="/js/snake.js"></script> -->
     <p>Move your right elbow to place the crown.</p>
 </body>
 </html>
